# zebra-launcher

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  styles.css  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: cd-deploy-to-dev.yml  cd-deploy-to-prod.yml  cd-deploy-to-test.yml  ci-lint-codebase.patch.yml  ci-lint-codebase.yml  sub-build-docker-image.yml  sub-cloudrun-deploy.yml  sub-unit-tests.yml
docker/: Dockerfile  nginx.conf
src/: App.tsx  Logs.tsx  constants.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: child_process.rs  main.rs  process.rs  state.rs
src/components/: checkbox.tsx
src/components/NodeMap/: NodeMap.tsx  map.json  popup.css
src/pages/: Configure.tsx  Logs.tsx  Map.tsx
src/tests/: example_data.ts  example_logs.ts
